@@ -45,21 +45,21 @@ except ImportError:
 #  - SHA1 sum of package
 archives = [
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-13655.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-13666.tgz',
      'xapian-core.tgz',
-     '103f9ace5bc6f1ab131b17bee98496dd614e57a3',
+     '029f833e9c86b18690d82981685d61e403a432f8',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-13655.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-13666.tgz',
      'xapian-bindings.tgz',
-     'e72a1b67c1c4953c7627a8df6e322215cbed0114',
+     'f041fd1072e23f0268d0ecfcbb09700b6a5218b4',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-13655.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-13666.tgz',
      'win32msvc.tgz',
-     '63fe4cd29dd9064b90f3c34ce034e7a3e256af91',
+     '71edb8110dfc8fd615bf9e90f482ced71751a1ad',
      'xapian-core/win32',
     ),
     ('Xapian extras',
